--- a/win/umicom.rc
+++ b/win/umicom.rc
@@ -15,26 +15,24 @@
  *
  * Created by: Umicom Foundation | Developer: Sammy Hegab | Date: 2025-10-15
  *---------------------------------------------------------------------------*/
+// ----------------------------------------------------------------------------
 
 #include <windows.h>
-#include "resource.h"   // resolved by target include dirs (no relative paths)
+#include "resource.h"   // use central IDs (IDI_APPICON, IDP_SPLASH, etc.)
 
-// Application icons (ICO should contain multiple sizes; Windows picks best fit)
-//------------------------------------------------------------------------------
-// Icons
-//------------------------------------------------------------------------------
-// The .ico should contain multiple sizes (16/32/48/64/128/256). Windows will
-// automatically choose the best fit.
-IDI_APPICON       ICON    "umicom.ico"
-IDI_APPICON_SMALL ICON    "umicom.ico"
+// Icon resource
+// (Removed the local `#define IDI_APPICON 101` to avoid ID duplication;
+//  the ID now comes from src/ui/include/resource.h.)
+IDI_APPICON ICON "umicom.ico"
 
 //------------------------------------------------------------------------------
 // Splash / branding image
 //------------------------------------------------------------------------------
-// Embed PNG splash as raw data (portable and easy to load in code)
-IDP_SPLASH        RCDATA  "umicom-logo.png"
 
-// --- Optional VERSIONINFO block (enable via CMake defs) ---
+// Embed the splash image as raw data (portable PNG via RCDATA)
+IDP_SPLASH  RCDATA "umicom-logo.png"
+
+// Optional version info (you can delete or update values if you want)
 //------------------------------------------------------------------------------
 // Optional VERSIONINFO
 //------------------------------------------------------------------------------
@@ -45,38 +43,35 @@ IDP_SPLASH        RCDATA  "umicom-logo.png"
 //   UMI_FILE_VERSION_PATCH=${PROJECT_VERSION_PATCH})
 //------------------------------------------------------------------------------
 
-#ifdef UMI_FILE_VERSION_MAJOR
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION     UMI_FILE_VERSION_MAJOR,UMI_FILE_VERSION_MINOR,UMI_FILE_VERSION_PATCH,0
- PRODUCTVERSION  UMI_FILE_VERSION_MAJOR,UMI_FILE_VERSION_MINOR,UMI_FILE_VERSION_PATCH,0
- FILEFLAGSMASK   0x3fL
+ FILEVERSION 1,0,0,0
+ PRODUCTVERSION 1,0,0,0
+ FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
- FILEFLAGS       0x1L
+ FILEFLAGS 0x1L
 #else
- FILEFLAGS       0x0L
+ FILEFLAGS 0x0L
 #endif
- FILEOS          0x40004L
- FILETYPE        0x1L
- FILESUBTYPE     0x0L
+ FILEOS 0x40004L
+ FILETYPE 0x1L
+ FILESUBTYPE 0x0L
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
-  // 0409 = en-US, 04B0 = Unicode, common for VS-generated resources
-      BLOCK "040904B0"
+    BLOCK "040904b0"
     BEGIN
-      VALUE "CompanyName",      "Umicom Foundation\0"
-      VALUE "FileDescription",  "Umicom Studio IDE\0"
-      VALUE "FileVersion",      "UMI_FILE_VERSION_MAJOR.UMI_FILE_VERSION_MINOR.UMI_FILE_VERSION_PATCH\0"
-      VALUE "InternalName",     "umicom-studio-ide.exe\0"
-      VALUE "OriginalFilename", "umicom-studio-ide.exe\0"
-      VALUE "ProductName",      "Umicom Studio\0"
-      VALUE "ProductVersion",   "UMI_FILE_VERSION_MAJOR.UMI_FILE_VERSION_MINOR.UMI_FILE_VERSION_PATCH\0"
-      VALUE "LegalCopyright",   "© Umicom Foundation\0"
-    END
+      VALUE "CompanyName", "Umicom"
+      VALUE "FileDescription", "Umicom Studio IDE"
+      VALUE "FileVersion", "1.0.0.0"
+      VALUE "InternalName", "umicom-studio.exe"
+      VALUE "OriginalFilename", "umicom-studio.exe"
+      VALUE "ProductName", "Umicom Studio"
+      VALUE "ProductVersion", "1.0.0.0"
+      VALUE "LegalCopyright",   "© Umicom Foundation\0"   
+       END
   END
   BLOCK "VarFileInfo"
   BEGIN
     VALUE "Translation", 0x0409, 1200
   END
 END
-#endif // UMI_FILE_VERSION_MAJOR
